# pyverify

./: .gitignore  CONVENTIONS.md  README.md  pyproject.toml
.github/workflows/: pages.yml
config/: default.yaml
demo/: README.md  run_demo.sh
demo/sample_app/: .pyverdex.yaml  .pyverify.yaml
demo/sample_app/tests/: test_inventory.py  test_pricing.py
docs/: ARCHITECTURE.md
docs/adr/: 0001-adopt-project-keel-structure.md  0002-test-level-taxonomy.md  0003-semantic-detection-and-runner-seam.md
examples/sample_project/tests/: test_calc.py
scripts/: sync-vendor.sh
src/pyverdex/: __init__.py  backends.py  cli.py  config.py  discovery.py  graph.py  knowledge.py  llm.py  models.py  state.py
src/pyverdex/report/: builder.py
src/pyverdex/server/: __init__.py  app.py  runs.py  terminal.py
src/pyverdex/skills/: _detect.py  _gates.py  _testrun.py  audit.py  evaluate.py  fix.py  generate.py  integrate.py
src/pyverify/: __init__.py  cli.py  config.py  discovery.py  knowledge.py  llm.py  models.py  state.py
tests/: conftest.py  test_adapters.py  test_apply_mode.py  test_config.py  test_coverage_totals.py  test_discovery.py  test_engine.py  test_phase_b_resilience.py  test_phase_c_close_loop.py  test_phase_d_test_levels.py  test_phase_e_framework_detection.py  test_report_builder.py  test_server.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/public/: sample-report.json  seven-steps.md
web/scripts/: gen-steps-doc.ts  steps-doc.test.ts  steps-doc.ts
web/src/: App.tsx  Terminal.tsx  api.ts  main.tsx  styles.css
(+52 files in other folders)
